--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="cordova.js"></script>
     <!-- your app's js -->
     <script src="lib/moment/moment.js"></script>
+    <script src="lib/common/jiraRestApp.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
