--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- your app's js -->
+    <script src="lib/common/jiraRestApp.js"></script>
     <script src="lib/moment/moment.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
