add screen for configuration

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <!-- angular date picker js-->
+    <!-- <script src="lib/datePicker/js/angular-pickadate.js"></script> -->
+    <!-- angular date picker css-->
+    <!-- <link href="lib/datePicker/css/angular-pickadate.css" rel="stylesheet"> -->
     <!-- your app's js -->
     <script src="lib/moment/moment.js"></script>
     <script src="lib/common/jiraRestApp.js"></script>
