--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- angular date picker js-->
-    <!-- <script src="lib/datePicker/js/angular-pickadate.js"></script> -->
+    <script src="lib/datePicker/js/angular-pickadate.js"></script>
     <!-- angular date picker css-->
-    <!-- <link href="lib/datePicker/css/angular-pickadate.css" rel="stylesheet"> -->
+    <link href="lib/datePicker/css/angular-pickadate.css" rel="stylesheet">
     <!-- your app's js -->
     <script src="lib/moment/moment.js"></script>
     <script src="lib/common/jiraRestApp.js"></script>
