--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
+    <!-- angular date picker js-->
+    <script src="lib/datePicker/js/angular-pickadate.js"></script>
+    <!-- angular date picker css-->
+    <link href="lib/datePicker/css/angular-pickadate.css" rel="stylesheet">
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
