--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
     <link href="css/style.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <!-- angular date picker css-->
-    <!-- <link href="lib/ionic-datepicker/style.css" rel="stylesheet"> -->
+    <link href="lib/datePicker/css/angular-pickadate.css" rel="stylesheet">
     <link href="css/ionic.app.css" rel="stylesheet">
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- angular date picker js-->
-    <script src="lib/onezone-datepicker/dist/onezone-datepicker.min.js"></script>
+    <script src="lib/datePicker/js/angular-pickadate.js"></script>
     <!-- your app's js -->
     <script src="lib/moment/moment.js"></script>
     <script src="lib/common/jiraRestApp.js"></script>
