--- a/public/index.html
+++ b/public/index.html
@@ -7,38 +7,40 @@
     <title></title>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-    <!-- angular date picker js-->
-    <script src="lib/datePicker/js/angular-pickadate.js"></script>
+    <link rel="icon" href="/img/favicon.png" sizes="16x16" type="image/png">
     <!-- angular date picker css-->
     <link href="lib/datePicker/css/angular-pickadate.css" rel="stylesheet">
-    <!-- your app's js -->
-    <script src="lib/moment/moment.js"></script>
-    <script src="lib/common/jiraRestApp.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
 </head>
 
-<body ng-app="starter">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
+<body ng-app="jiraRestApp">
     <ion-nav-bar class="bar-stable">
         <ion-nav-back-button>
         </ion-nav-back-button>
     </ion-nav-bar>
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
     <ion-nav-view></ion-nav-view>
 </body>
 
 </html>
+<!-- ionic/angularjs js -->
+<script src="lib/ionic/js/ionic.bundle.js"></script>
+<!-- cordova script (this will be a 404 during development) -->
+<script src="cordova.js"></script>
+<!-- angular date picker js-->
+<script src="lib/datePicker/js/angular-pickadate.js"></script>
+<!-- your app's js -->
+<script src="lib/moment/moment.js"></script>
+<script src="lib/common/jiraRestApp.js"></script>
+<script src="js/app.js"></script>
+<!-- controllers in app -->
+<script src="js/controllers/loginController.js"></script>
+<script src="js/controllers/settingController.js"></script>
+<script src="js/controllers/timeSheetController.js"></script>
+<script src="js/controllers/timeSheetDetailController.js"></script>
+<script src="js/controllers/workLogController.js"></script>
+<!-- services in app -->
+<script src="js/services/commonService.js"></script>
+<script src="js/services/timeSheetService.js"></script>
+<script src="js/services/userService.js"></script>
+<script src="js/services/workLogService.js"></script>
+<!-- directives in app -->
+<script src="js/directives/pickDateDirective.js"></script>
